<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grayBlue_400"
    tools:context="com.example.main.activities.LoginActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="70dp"
        android:layout_marginEnd="15dp"
        android:background="@color/gray_300"
        android:paddingBottom="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/tvMensagem"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:ems="10"
            android:text="@string/bem_vindo"
            android:textAlignment="center"
            android:textColor="@color/grayBlue_500"
            android:textColorLink="@color/white"
            android:textSize="30sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/edT_Login"
            android:layout_width="271dp"
            android:layout_height="40dp"
            android:layout_marginTop="100dp"
            android:padding="5dp"
            android:background="@color/white"
            android:ems="10"
            android:inputType="textPersonName"
            android:hint="@string/hint_login"
            android:textAlignment="textStart"
            android:textColor="@color/grayBlue_500"
            android:textColorLink="@color/white"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.502"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:importantForAutofill="no" />

        <EditText
            android:id="@+id/edt_Pass"
            android:layout_width="271dp"
            android:layout_height="40dp"
            android:layout_marginTop="10dp"
            android:padding="5dp"
            android:background="@color/white"
            android:ems="10"
            android:inputType="textPassword"
            android:hint="@string/hint_senha"
            android:textAlignment="textStart"
            android:textColor="@color/grayBlue_500"
            android:textColorLink="@color/white"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edT_Login"
            android:importantForAutofill="no" />

        <Button
            android:id="@+id/btLogar"
            android:layout_width="271dp"
            android:layout_height="55dp"
            android:layout_marginTop="24dp"
            android:text="@string/entrar"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.472"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edt_Pass" />

        <Button
            android:id="@+id/btNovo"
            android:layout_width="126dp"
            android:layout_height="49dp"
            android:backgroundTint="@color/grayBlue_400"
            android:text="@string/novo"
            android:textColor="@color/white"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/tvEsqueceuSenha"
            app:layout_constraintStart_toStartOf="@+id/btLogar" />

        <TextView
            android:id="@+id/tvEsqueceuSenha"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="54dp"
            android:autoLink="all"
            android:linksClickable="false"
            android:selectAllOnFocus="false"
            android:text="@string/esqueceu"
            android:textColor="@color/grayBlue_700"
            android:textColorLink="@color/grayBlue_700"
            app:layout_constraintStart_toEndOf="@+id/btNovo"
            app:layout_constraintTop_toBottomOf="@+id/btLogar" />


    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>